implemented feature flags updates, Get feature flags Api's